--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="assets/css/profileStudent.css">
     <link rel="stylesheet" href="assets/css/formStudent.css">
     <link rel="stylesheet" href="assets/css/formRecuiter.css">
+    <link rel="stylesheet" href="assets/css/profileRecruiter.css">
 
     <link href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css'>
     <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.bundle.min.js'></script>
